# image-mcp-servers

./: .env.example  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml
.github/workflows/: server-tests.yaml
src/: main.rs
src/tools/: mod.rs
src/tools/huggingface/: mod.rs
src/tools/replicate/: get_prediction.rs  mod.rs
