[package]
name = "image-mcp-servers"
version = "0.1.0"
edition = "2024"

[features]
huggingface = []
replicate = []

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
serde = "1.0.219"
mcp-core = { version = "0.1.43", features = ["sse"] }
anyhow = "1.0.98"
serde_json = "1.0.140"
tracing = "0.1.41"
mcp-core-macros = "0.1.11"
reqwest = "0.12.15"
schemars = "0.8.22"
thiserror = "2.0.12"
base64 = "0.22.1"
urlencoding = "2.1.3"
