[package]
name = "image-mcp-servers"
version = "0.1.0"
edition = "2024"

[features]
default = ["replicate"]
huggingface = []
replicate = []
openai = []
[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
serde = "1.0.219"
mcp-core = { version = "0.1.44", features = ["sse"] }
anyhow = "1.0.98"
serde_json = "1.0.140"
tracing = "0.1.41"
mcp-core-macros = "0.1.21"
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
schemars = "0.8.22"
thiserror = "2.0.12"
base64 = "0.22.1"
urlencoding = "2.1.3"
clap = { version = "4.5.37", features = ["derive"] }
